feat: colors changed

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -92,7 +92,7 @@ body {
       transparent,
       rgb(var(--background-end-rgb))
     )
-    #6e4d37
+    #2C2C2C
     /* rgb(var(--background-start-rgb)); */
 }
 
